@@ -33,11 +33,15 @@
 #' @param file filename
 #' @param storeAll should all spectra stored? or only the needed ones?
 #' @param removeNeutralLoss remove rows with neutral loss != "none"?
+#' @param removePrecursor remove precursor ion from fragments
+#' @param tolerance tolerance to look for the precursor ion
 #' @param verbose verbose output
 #' @return modified assaydata
 #' @noRd
 .finalFragment2spectra <- function(df, file, storeAll=TRUE,
-                                   removeNeutralLoss=TRUE, verbose=TRUE) {
+                                   removeNeutralLoss=TRUE,
+                                   removePrecursor=TRUE,
+                                   tolerance=25e-6, verbose=TRUE) {
   fragments <- .readFragements(file, removeNeutralLoss=removeNeutralLoss,
                                verbose=verbose)
 
@@ -69,11 +73,15 @@
     assign(as.character(uleID[i]),
            .createMs2SpectrumFromFragments(uleID[i],
                                            fragments=fragments,
-                                           assignments=assignments),
+                                           assignments=assignments,
+                                           removePrecursor=removePrecursor,
+                                           tolerance=tolerance),
            envir=assaydata)
     fragment.str[i] <- .getFragmentStrFromFragments(uleID[i],
                                                     fragments=fragments,
-                                                    assignments=assignments)
+                                                    assignments=assignments,
+                                                    removePrecursor=removePrecursor,
+                                                    tolerance=tolerance)
     sequences[i] <- .getPeptideSeqFromFragments(uleID[i],
                                                 fragments=fragments,
                                                 assignments=assignments)
@@ -116,18 +124,33 @@
 #' @param leID precursor.leID
 #' @param fragments data.frame generated by readFragments
 #' @param assignments env
+#' @param removePrecursor remove precursor ion from fragments
+#' @param tolerance tolerance to look for the precursor ion
 #' @return character vector
 #' @noRd
-.getFragmentStrFromFragments <- function(leID, fragments, assignments) {
+.getFragmentStrFromFragments <- function(leID, fragments, assignments,
+                                         removePrecursor=TRUE,
+                                         tolerance=25e-6) {
   key <- as.character(leID)
 
   if (exists(key, envir=assignments)) {
     i <- get(key, envir=assignments)
 
-    fragment.str <- MSnbase:::utils.vec2ssv(
-      fragments$fragment.str[i][order(fragments$product.mhp[i])])
+    o <- order(fragments$product.mhp[i])
 
-    if (nchar(fragment.str)) {
+    if (removePrecursor) {
+      m <- !as.logical(MSnbase:::relaxedMatch(x=fragments$product.mhp[i[o]],
+                                              table=fragments$precursor.mhp[i[1]],
+                                              nomatch=0,
+                                              relative=TRUE,
+                                              tolerance=tolerance))
+      o <- o[m]
+
+    }
+
+    fragment.str <- MSnbase:::utils.vec2ssv(fragments$fragment.str[i][o])
+
+    if (nzchar(fragment.str)) {
       return(fragment.str)
     }
   }
