@@ -114,10 +114,13 @@
 #' @param file filename
 #' @param assaydata environment
 #' @param storeAll should all spectra stored? or only the needed ones?
+#' @param removePrecursor remove precursor ion from fragments
+#' @param tolerance tolerance to look for the precursor ion
 #' @param verbose verbose output
 #' @return modified assaydata
 #' @noRd
-.spectrumXml2spectra <- function(df, file, storeAll=TRUE, verbose=TRUE) {
+.spectrumXml2spectra <- function(df, file, storeAll=TRUE, removePrecursor=TRUE,
+                                 tolerance=25e-6, verbose=TRUE) {
   xml <- .readSynapterSpectrumXml(file, ms1=TRUE, verbose=verbose)
 
   peptideinfo <- df[!duplicated(df$precursor.leID), ]
@@ -140,11 +143,13 @@
   for (i in seq(along=uleID)) {
     assign(as.character(uleID[i]),
            .createMs2SpectrumFromSpectrumXml(uleID[i], xml$ms1, xml$ms2,
-                                             xml$assignments),
+                                             xml$assignments,
+                                             removePrecursor=removePrecursor,
+                                             tolerance=tolerance),
            envir=assaydata)
     if (i <= nrow(df)) {
-      ## in the xml files are no sequence information that's why we can
-      ## only use the information from the df
+      ## in the xml files are no sequence information that's why we have to use
+      ## information from the df
       sequences[i] <- peptideinfo$peptide.seq[i]
     }
 
@@ -187,9 +192,13 @@
 #' @param ms1 ms1 matrix generated by .readSynapterSpectrumXml
 #' @param ms2 ms2 matrix generated by .readSynapterSpectrumXml
 #' @param assignments env generated by .readSynapterSpectrumXml
+#' @param removePrecursor remove precursor ion from fragments
+#' @param tolerance tolerance to look for the precursor ion
 #' @return Spectrum2 object
 #' @noRd
-.createMs2SpectrumFromSpectrumXml <- function(leID, ms1, ms2, assignments) {
+.createMs2SpectrumFromSpectrumXml <- function(leID, ms1, ms2, assignments,
+                                              removePrecursor=TRUE,
+                                              tolerance=25e-6) {
   key <- as.character(leID)
 
   if (exists(key, envir=assignments)) {
@@ -202,7 +211,9 @@
                                    precursor.z=ms1[leID, "Z"],
                                    precursor.retT=ms1[leID, "RT"],
                                    mass=ms2[i, "Mass"],
-                                   intensity=ms2[i, "Intensity"]))
+                                   intensity=ms2[i, "Intensity"],
+                                   removePrecursor=removePrecursor,
+                                   tolerance=tolerance))
   } else {
     return(.createEmptyMsnbaseSpectrum2(leID=leID))
   }
@@ -212,9 +223,13 @@
 #' @param leID precursor.leID
 #' @param fragments data.frame generated by readFragments
 #' @param assignments env
+#' @param removePrecursor remove precursor ion from fragments
+#' @param tolerance tolerance to look for the precursor ion
 #' @return Spectrum2 object
 #' @noRd
-.createMs2SpectrumFromFragments <- function(leID, fragments, assignments) {
+.createMs2SpectrumFromFragments <- function(leID, fragments, assignments,
+                                            removePrecursor=TRUE,
+                                            tolerance=25e-6) {
   key <- as.character(leID)
 
   if (exists(key, envir=assignments)) {
@@ -227,7 +242,9 @@
                                    precursor.z=fragments$precursor.z[j],
                                    precursor.retT=fragments$precursor.retT[j],
                                    mass=fragments$product.mhp[i],
-                                   intensity=fragments$product.inten[i]))
+                                   intensity=fragments$product.inten[i],
+                                   removePrecursor=removePrecursor,
+                                   tolerance=25e-6))
   } else {
     return(.createEmptyMsnbaseSpectrum2(leID=leID))
   }
@@ -241,13 +258,29 @@
 #' @param precursor.retT precursor retention time
 #' @param mass mass/mz
 #' @param intensity intensity
+#' @param removePrecursor remove precursor ion from fragments
+#' @param tolerance tolerance to look for the precursor ion
 #' @return Spectrum2 object
 #' @noRd
 .createMsnbaseSpectrum2 <- function(leID, precursor.mhp, precursor.inten,
                                     precursor.z, precursor.retT,
-                                    mass, intensity) {
+                                    mass, intensity,
+                                    removePrecursor=TRUE, tolerance=25e-6) {
   ## just to be sure, you can't trust any information in the csv/xml files
   o <- order(mass)
+
+  if (removePrecursor) {
+    m <- !as.logical(MSnbase:::relaxedMatch(x=mass[o], table=precursor.mhp,
+                                            nomatch=0,
+                                            relative=TRUE,
+                                            tolerance=tolerance))
+    o <- o[m]
+
+    if (!length(o)) {
+      return(.createEmptyMsnbaseSpectrum2(leID=leID))
+    }
+  }
+
   new("Spectrum2",
       precScanNum=as.integer(leID),
       precursorMz=precursor.mhp,
@@ -256,7 +289,7 @@
       rt=precursor.retT,
       centroided=TRUE,
       # tic=precursor.inten,
-      peaksCount=length(mass),
+      peaksCount=length(o),
       mz=mass[o], intensity=intensity[o],
       fromFile=1L)
 }
@@ -269,6 +302,7 @@
   if (missing(leID)) {
     leID <- as.integer(tail(strsplit(key, ":")[[1]], 1))
   }
-  new("Spectrum2", precScanNum=as.integer(leID))
+
+  new("Spectrum2", precScanNum=as.integer(leID), fromFile=1L)
 }
 
