@@ -10,6 +10,8 @@ CHANGES IN VERSION 1.7.3
  o add createUniquePeptideDbRds (regards #55) [2014-04-29 Tue]
  o allow to use an RDS instead of a fasta file as 'Unique Peptides Database';
    closes #55 [2014-04-29 Tue]
+ o add removePrecursor and tolerance argument to loadSpectrumXmlFiles and
+   loadFragmentCsvFiles; closes #59 [2014-04-30 Wed]
 
 CHANGES IN VERSION 1.7.2
 ------------------------
